[gd_scene load_steps=14 format=3 uid="uid://wl8gw1rj7die"]

[ext_resource type="Script" path="res://Entities/Entities/WireEntity.gd" id="1_e3rvy"]
[ext_resource type="Texture2D" uid="uid://bwd2uf7jgu58f" path="res://Shared/export/s4m_ur4i_factory-o-pixelart_tileset.png" id="2_4g7yf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nt5ko"]
atlas = ExtResource("2_4g7yf")
region = Rect2(80, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kbgt"]
atlas = ExtResource("2_4g7yf")
region = Rect2(64, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhayy"]
atlas = ExtResource("2_4g7yf")
region = Rect2(48, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6pjy"]
atlas = ExtResource("2_4g7yf")
region = Rect2(32, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj6ye"]
atlas = ExtResource("2_4g7yf")
region = Rect2(96, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnttk"]
atlas = ExtResource("2_4g7yf")
region = Rect2(32, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ewa8"]
atlas = ExtResource("2_4g7yf")
region = Rect2(48, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts3r6"]
atlas = ExtResource("2_4g7yf")
region = Rect2(64, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_skciu"]
atlas = ExtResource("2_4g7yf")
region = Rect2(80, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkp5t"]
atlas = ExtResource("2_4g7yf")
region = Rect2(96, 208, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_046wr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt5ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kbgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhayy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6pjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj6ye")
}],
"loop": false,
"name": &"input",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnttk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ewa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts3r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skciu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkp5t")
}],
"loop": false,
"name": &"output",
"speed": 5.0
}]

[node name="WireEntity" type="Node2D" groups=["power_movers"]]
script = ExtResource("1_e3rvy")

[node name="SpriteUp" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_4g7yf")
region_enabled = true
region_rect = Rect2(16, 208, 16, 16)

[node name="SpriteRight" type="Sprite2D" parent="."]
z_index = -1
rotation = 1.5708
texture = ExtResource("2_4g7yf")
region_enabled = true
region_rect = Rect2(16, 208, 16, 16)

[node name="SpriteDown" type="Sprite2D" parent="."]
z_index = -1
rotation = 3.14159
texture = ExtResource("2_4g7yf")
region_enabled = true
region_rect = Rect2(16, 208, 16, 16)

[node name="SpriteLeft" type="Sprite2D" parent="."]
z_index = -1
rotation = 4.71239
texture = ExtResource("2_4g7yf")
region_enabled = true
region_rect = Rect2(16, 208, 16, 16)

[node name="AnimationUp" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_046wr")
animation = &"output"
frame = 4
frame_progress = 1.0

[node name="AnimationRight" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_046wr")
animation = &"output"
frame = 4
frame_progress = 1.0

[node name="AnimationDown" type="AnimatedSprite2D" parent="."]
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_046wr")
animation = &"output"
frame = 4
frame_progress = 1.0

[node name="AnimationLeft" type="AnimatedSprite2D" parent="."]
rotation = 4.71239
sprite_frames = SubResource("SpriteFrames_046wr")
animation = &"output"
frame = 4
frame_progress = 1.0
